<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="iot.ttu.edu.c4lab.smarthomem2m.WizardActivity">
    <item
        android:id="@+id/action_demo"
        android:orderInCategory="100"
        android:title="@string/action_demo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/action_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reconnect"
        android:orderInCategory="100"
        android:title="@string/action_reconnect"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clipstest"
        android:orderInCategory="100"
        android:title="@string/action_clipstest"
        app:showAsAction="never" />
</menu>
