<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wizard_step4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:layout_marginBottom="@dimen/contentView_vertical_margin"
    android:layout_marginLeft="@dimen/contentView_horizontal_margin"
    android:layout_marginRight="@dimen/contentView_horizontal_margin"
    android:layout_marginTop="@dimen/contentView_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_step1_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smartHomeAddRuleWizard_step4_title"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_title" />

    <Space
        android:layout_width="1dp"
        android:layout_height="@dimen/space_height" />

    <TextView
        android:id="@+id/textView_step1_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/contentView_horizontal_margin"
        android:layout_marginRight="@dimen/contentView_horizontal_margin"
        android:text="@string/smartHomeAddRuleWizard_step4_message"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_message" />

    <Space
        android:layout_width="1dp"
        android:layout_height="@dimen/space_height" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_ruleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/contentView_horizontal_margin"
                android:layout_marginRight="@dimen/contentView_horizontal_margin"
                android:maxLines="1"
                android:text="@string/smartHomeAddRuleWizard_step4_ruleName"
                android:textSize="@dimen/text_size_field" />

            <Space
                android:layout_width="1dp"
                android:layout_height="@dimen/space_height_half" />

            <TextView
                android:id="@+id/textView_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/contentView_horizontal_margin"
                android:layout_marginRight="@dimen/contentView_horizontal_margin"
                android:text="@string/smartHomeAddRuleWizard_step4_condition"
                android:textSize="@dimen/text_size_field" />

            <Space
                android:layout_width="1dp"
                android:layout_height="@dimen/space_height_half" />

            <TextView
                android:id="@+id/textView_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/contentView_horizontal_margin"
                android:layout_marginRight="@dimen/contentView_horizontal_margin"
                android:text="@string/smartHomeAddRuleWizard_step4_action"
                android:textSize="@dimen/text_size_field" />
        </LinearLayout>
    </ScrollView>

    <Space
        android:layout_width="1dp"
        android:layout_height="@dimen/space_height_half" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/smartHomeAddRuleWizard_step4_refresh" />

        <Button
            android:id="@+id/button_addRule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/smartHomeAddRuleWizard_step4_addRule" />
    </LinearLayout>
</LinearLayout>