<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wizard_step1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/contentView_vertical_margin"
    android:layout_marginLeft="@dimen/contentView_horizontal_margin"
    android:layout_marginRight="@dimen/contentView_horizontal_margin"
    android:layout_marginTop="@dimen/contentView_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_step1_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smartHomeAddRuleWizard_step1_title"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_title" />

    <Space
        android:layout_width="1dp"
        android:layout_height="@dimen/space_height" />

    <TextView
        android:id="@+id/textView_step1_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/contentView_horizontal_margin"
        android:layout_marginRight="@dimen/contentView_horizontal_margin"
        android:text="@string/smartHomeAddRuleWizard_step1_message"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_message" />

    <Space
        android:layout_width="1dp"
        android:layout_height="@dimen/space_height" />

    <EditText
        android:id="@+id/editText_ruleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/contentView_horizontal_margin"
        android:layout_marginRight="@dimen/contentView_horizontal_margin"
        android:ems="10"
        android:hint="@string/smartHomeAddRuleWizard_step1_item_name"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="@dimen/text_size_field" />

    <Space
        android:layout_width="1dp"
        android:layout_height="@dimen/space_height" />

    <TextView
        android:id="@+id/textView_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/contentView_horizontal_margin"
        android:layout_marginRight="@dimen/contentView_horizontal_margin"
        android:text="@string/smartHomeAddRuleWizard_step1_error"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_field"
        android:visibility="invisible" />
</LinearLayout>